Added a smarter way of creating navigation info for AI in the editor. A few tweaks on the astar implementation and the citizen logic. Added a sample scene

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -116,6 +116,7 @@
       <DependentUpon>app.css</DependentUpon>
     </Content>
     <None Include="Content\ScriptedEvents\Outro.tscr" />
+    <Content Include="Content\Scenes\navmesh.js" />
     <Content Include="Content\Scenes\simple.js" />
     <Content Include="Content\simple-assets.js" />
     <Content Include="Content\Sounds\dialog.mp3" />
