Further improvements on navmesh generation. GOTO scripted action is now using AStar.  Our demo scene is now incompatible, must be reworked. There's a sublte bug lurking in the GOTO action, some refactoring and path smoothing must be done asap

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -115,6 +115,7 @@
     <Content Include="app.css.map">
       <DependentUpon>app.css</DependentUpon>
     </Content>
+    <Content Include="Content\ScriptedEvents\NavmeshTest.tscr" />
     <None Include="Content\ScriptedEvents\Outro.tscr" />
     <Content Include="Content\Scenes\navmesh.js" />
     <Content Include="Content\Scenes\simple.js" />
