--- a/Thralldom.Editor/Thralldom.Editor.csproj
+++ b/Thralldom.Editor/Thralldom.Editor.csproj
@@ -182,6 +182,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="navmesh.html" />
     <Content Include="web.config" />
   </ItemGroup>
   <ItemGroup>
