Updated several models. Added a tree and a konak. Updated the current main scene slightly. Improved navmesh exporting and fixed a bug with rectangle hash collisions

--- a/ProjectThralldom/ProjectThralldom.csproj
+++ b/ProjectThralldom/ProjectThralldom.csproj
@@ -53,16 +53,24 @@
     <Content Include="Content\Models\Buildings\Houses\d985bf06.jpg" />
     <Content Include="Content\Models\Buildings\Houses\House_01.js" />
     <Content Include="Content\Models\Buildings\Houses\House_03.js" />
+    <Content Include="Content\Models\Buildings\Houses\Konak.js" />
     <Content Include="Content\Models\Buildings\Houses\market.js" />
     <Content Include="Content\Models\Buildings\Houses\mill.js" />
     <Content Include="Content\Models\Buildings\Houses\mint.js" />
+    <Content Include="Content\Models\Buildings\Houses\oakLeaf.png" />
+    <Content Include="Content\Models\Buildings\Houses\oakWhite.jpg" />
+    <Content Include="Content\Models\Buildings\Houses\oldhouse.js" />
     <Content Include="Content\Models\Buildings\Houses\oldwarehouse.js" />
     <Content Include="Content\Models\Buildings\Houses\Restaurant_one.js" />
     <Content Include="Content\Models\Buildings\Houses\Restaurant_two.js" />
+    <Content Include="Content\Models\Buildings\Houses\rock_big.js" />
+    <Content Include="Content\Models\Buildings\Houses\rock_medium.js" />
+    <Content Include="Content\Models\Buildings\Houses\rock_small.js" />
     <Content Include="Content\Models\Buildings\Houses\smallmarket.js" />
     <Content Include="Content\Models\Buildings\Houses\Tavern.js" />
     <Content Include="Content\Models\Buildings\Houses\totalTexture.jpg" />
     <Content Include="Content\Models\Buildings\Houses\TransparentTexture.png" />
+    <Content Include="Content\Models\Buildings\Houses\Tree_01.js" />
     <Content Include="Content\Models\Buildings\Houses\well.js" />
     <Content Include="Content\Models\Buildings\Houses\Workshop.js" />
     <Content Include="Content\Models\Buildings\MarketCart\cart.js" />
@@ -79,18 +87,6 @@
     <Content Include="Content\Models\Buildings\House_02\two.jpg" />
     <Content Include="Content\Models\Buildings\House_01\walls.jpg" />
     <Content Include="Content\Models\Buildings\MarketCart\Monastery\monastery_texture.jpg" />
-    <Content Include="Content\Models\Buildings\OldHouse\Door_Def.jpg" />
-    <Content Include="Content\Models\Buildings\OldHouse\Floor.jpg" />
-    <Content Include="Content\Models\Buildings\OldHouse\Frame_Def.jpg" />
-    <Content Include="Content\Models\Buildings\OldHouse\Glasses.jpg" />
-    <Content Include="Content\Models\Buildings\OldHouse\oldhouse.js" />
-    <Content Include="Content\Models\Buildings\OldHouse\Roof_Def.jpg" />
-    <Content Include="Content\Models\Buildings\OldHouse\Steel_Def.jpg" />
-    <Content Include="Content\Models\Buildings\OldHouse\Wall_Def.jpg" />
-    <Content Include="Content\Models\Buildings\Rocks\rock.jpg" />
-    <Content Include="Content\Models\Buildings\Rocks\rock_big.js" />
-    <Content Include="Content\Models\Buildings\Rocks\rock_medium.js" />
-    <Content Include="Content\Models\Buildings\Rocks\rock_small.js" />
     <Content Include="Content\Models\Buildings\SmallMarket\Small_Market.js" />
     <Content Include="Content\Models\Buildings\SmallMarket\Small_Market_01.jpg" />
     <Content Include="Content\Models\Buildings\SmallMarket\Small_Market_02.jpg" />
